--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,50 +1,71 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import Page from "@/src/layouts/Page.astro"
 ---
 
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-	</head>
-	<body>
-		<Header title={SITE_TITLE} />
-		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
-			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
-			</p>
-			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
-			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/pages/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-			</ul>
-			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
-		</main>
-		<Footer />
-	</body>
-</html>
+<Page>
+	<div class="my-52 text-center">
+		<h1 class="m-2 text-7xl font-bold">Sangwu Lee</h1>
+		<p class="lead">ML researcher, engineeer, programmer, and mathematician.</p>
+	</div>
+
+	<div class="space-y-4">
+		<h2>About me</h2>
+		<div>
+			<h3>Overview</h3>
+			<div>
+				<p>
+					I am a Senior student studying computer science and mathematics at University of Rochester. I am currently working as
+					a research assistant for <a href="https://roc-hci.com/">HCI Lab</a> under supervision of <a href="https://hoques.com/"
+						>Professor Ehsan Hoque</a
+					>. I've been an active collaborator of CMU's <a href="http://multicomp.cs.cmu.edu/">Multicomp lab</a> in multimodal learning
+					reserarch.
+				</p>
+			</div>
+		</div>
+		<div>
+			<h3>Researcher</h3>
+			<div>
+				<p>
+					My current research focus is in mulitmodal learning, image / video generation, Web + AI, and building efficient ML
+					systems in general. In conduting ML research, I value iteration speed in testing each idea. Apart from fundemental ML
+					research, I explore use of cutting-edge techniques ( mixed precision, model parallelism, CPU offloading, gradient
+					checkpointing ... ) to accelerate ML reseach. I am also a <a
+						href="https://jax.readthedocs.io/en/latest/notebooks/quickstart.html">JAX</a
+					> enthusiast. In mathematics, I mostly study analysis and differential equations. However, I've been exploring topics in
+					probability theory, mathematical statistics, and most recently, topology.
+				</p>
+			</div>
+		</div>
+		<div>
+			<h3>Engineer</h3>
+			<div>
+				<p>
+					I am also a full-stack web developer! I've been coding web applications since 2015 starting with plain HTML, CSS,
+					Javascript, and a hint of JQuery. Over the years, I've become an avid <a href="https://react.dev/">React</a> user and an
+					<a href="https://svelte.dev/">Svelte</a> enthusiast. However, I've been using <a
+						href="https://github.com/vercel/next.js/">Next.js</a
+					> for more mature projects. For API development, I fully embrace <a href="https://www.docker.com/">Docker</a> and <a
+						href="https://fastapi.tiangolo.com/">FastAPI</a
+					>. I've also made mobile apps using react native / flutter in past years.
+				</p>
+			</div>
+		</div>
+		<div>
+			<h3>Extra</h3>
+			<div>
+				<p>
+					I enjoy reading time to time. Most recently, I've been reading Blind Watchmaker by Richard Dawkins, 재수사 by 장강명,
+					and 夜よ鼠たちのために by 連城三紀彦 (translation by 양윤옥). I've studied multiple langauges in the past. I tried
+					learning Dutch, German, Spanish, and Mandarin in past years. Although, the only language I can speak in confidence
+					(apart from my native tongue) is Japanese. I've lived in Netherlands for 4 years. I can confidently say that Dutch
+					fries are on an another level.
+				</p>
+				<p>
+					During my years in Europe. I had a chance to go to Göttingen and visit David Hilbert's grave. I plan to go to
+					Princeton eventually to visit Gödel's grave as well. I was once a cofounder of a startup on Document-AI and got past
+					first few rounds of <a href="https://www.ycombinator.com/">Y-combinator</a>.
+				</p>
+			</div>
+		</div>
+	</div>
+</Page>
