--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -45,7 +45,8 @@ import github from "@/src/icons/github.svg?raw"
 			>, <a href="https://laion.ai/projects/">LAION</a>, and <a href="https://www.kaggle.com/">Kaggle</a>. I provide a clean,
 			hackable, and performant open-source implementation of image generation models. Both in pytorch and JAX. I also write a
 			technical blog on my progress and interest. I have a minimal/hackable Stylegan, ViT-VQGAN, Waifu2x, Real-ESRGAN
-			implementations in JAX. I plan to release the code and additional datasets in the future.
+			implementations in JAX. I also maintain it's pytorch counterparts. I plan to release the code and additional datasets in
+			the future.
 		</p>
 	</Card>
 </Page>
