adding favicon + basename changes

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,11 +12,11 @@ import github from "@/src/icons/github.svg?raw"
 	</div>
 	<nav class="flex">
 		<div class="flex grow gap-x-8">
-			<HeaderLink href="/">Home</HeaderLink>
-			<HeaderLink href="/papers">Papers</HeaderLink>
-			<HeaderLink href="/projects">Projects</HeaderLink>
-			<!-- <HeaderLink href="/rambling">Rambling</HeaderLink> -->
-			<!-- <HeaderLink href="/thanks">Thanks</HeaderLink> -->
+			<HeaderLink href="/devlog/">Home</HeaderLink>
+			<HeaderLink href="/devlog/papers">Papers</HeaderLink>
+			<HeaderLink href="/devlog/projects">Projects</HeaderLink>
+			<!-- <HeaderLink href="/devlog/rambling">Rambling</HeaderLink> -->
+			<!-- <HeaderLink href="/devlog/thanks">Thanks</HeaderLink> -->
 		</div>
 		<div class="flex gap-x-4">
 			<HeaderLink href="https://github.com/RE-N-Y"><Fragment set:html={github} /></HeaderLink>
