patch video issue

--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -13,7 +13,7 @@ import github from "@/src/icons/github.svg?raw"
 			<a href="https://lenia.vercel.app/">Lenia</a>
 		</h2>
 		<div class="center m-4 rounded-lg bg-white p-4">
-			<video class="aspect-square rounded-lg" height={512} width={512} src="/lenia.webm" autoplay loop></video>
+			<video class="aspect-square rounded-lg" height={512} width={512} src="/devlog/lenia.webm" autoplay loop></video>
 			<p>Running Neural Celluar Auotmata on the web</p>
 		</div>
 		<Divider />
