new blog + LaTex integration

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -41,3 +41,11 @@ const { title, description, image = "/placeholder-social.jpg" } = Astro.props
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
+
+<!-- Katex -->
+<link
+	rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/katex.min.css"
+	integrity="sha384-Um5gpz1odJg5Z4HAmzPtgZKdTBHZdw8S29IecapCSB31ligYPhHQZMIlWLYQGVoc"
+	crossOrigin="anonymous"
+/>
