--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,16 +8,16 @@
 		font-feature-settings: "rlig" 1, "calt" 1;
 	}
 	h1 {
-		@apply scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl;
+		@apply mt-4 scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl;
 	}
 	h2 {
-		@apply scroll-m-20 border-b pb-2 text-3xl font-semibold tracking-tight transition-colors first:mt-0;
+		@apply mt-4 scroll-m-20 border-b pb-2 text-3xl font-semibold tracking-tight transition-colors first:mt-0;
 	}
 	h3 {
-		@apply scroll-m-20 text-2xl font-semibold tracking-tight;
+		@apply mt-4 scroll-m-20 text-2xl font-semibold tracking-tight;
 	}
 	h4 {
-		@apply scroll-m-20 text-xl font-semibold tracking-tight;
+		@apply mt-4 scroll-m-20 text-xl font-semibold tracking-tight;
 	}
 	a {
 		@apply font-bold text-text transition ease-in-out hover:text-accent;
@@ -31,7 +31,11 @@
 	}
 
 	ul {
-		@apply my-6 ml-6 list-disc [&>li]:mt-2;
+		@apply ml-6 list-disc [&>li]:mt-2;
+	}
+
+	pre {
+		@apply p-4;
 	}
 
 	svg {
