header updates add back rambling link

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,7 +16,7 @@ import coffee from "@/src/icons/coffee.svg?raw"
 			<HeaderLink href="/devlog/">Home</HeaderLink>
 			<HeaderLink href="/devlog/papers">Papers</HeaderLink>
 			<HeaderLink href="/devlog/projects">Projects</HeaderLink>
-			<!-- <HeaderLink href="/devlog/rambling">Rambling</HeaderLink> -->
+			<HeaderLink href="/devlog/rambling">Rambling</HeaderLink>
 			<!-- <HeaderLink href="/devlog/thanks">Thanks</HeaderLink> -->
 		</div>
 		<div class="flex gap-x-4">
