--- a/src/pages/rambling/index.astro
+++ b/src/pages/rambling/index.astro
@@ -3,6 +3,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../../consts"
 import { getCollection } from "astro:content"
 import FormattedDate from "../../components/FormattedDate.astro"
 import Page from "@/src/layouts/Page.astro"
+import { Image, Picture } from "@astrojs/image/components"
 
 const posts = (await getCollection("rambling")).sort((a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf())
 ---
@@ -14,9 +15,11 @@ const posts = (await getCollection("rambling")).sort((a, b) => a.data.pubDate.va
 				posts.map((post) => (
 					<>
 						<FormattedDate date={post.data.pubDate} />
-						<h1>
+						<h1 class="mb-2">
 							<a href={`/devlog/rambling/${post.slug}/`}>{post.data.title}</a>
 						</h1>
+						<p class="mb-4">{post.data.description}</p>
+						{post.data.heroImage && <img src={post.data.heroImage} height={256} alt="hero" />}
 					</>
 				))
 			}
