--- a/src/pages/rambling/index.astro
+++ b/src/pages/rambling/index.astro
@@ -1,9 +1,8 @@
 ---
-import { SITE_TITLE, SITE_DESCRIPTION } from "../../consts"
 import { getCollection } from "astro:content"
 import FormattedDate from "../../components/FormattedDate.astro"
 import Page from "@/src/layouts/Page.astro"
-import { Image, Picture } from "@astrojs/image/components"
+import { Image } from "astro:assets"
 
 const posts = (await getCollection("rambling")).sort((a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf())
 ---
@@ -19,7 +18,9 @@ const posts = (await getCollection("rambling")).sort((a, b) => a.data.pubDate.va
 							<a href={`/devlog/rambling/${post.slug}/`}>{post.data.title}</a>
 						</h1>
 						<p class="mb-4">{post.data.description}</p>
-						{post.data.heroImage && <img src={post.data.heroImage} height={256} alt="hero" />}
+						{post.data.heroImage && (
+							<Image src={post.data.heroImage} class="w-full" width={768} height={256} alt="hero" />
+						)}
 					</>
 				))
 			}
