--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -41,7 +41,7 @@ import laptop from "@/src/icons/laptop.svg?raw"
 		<div class="flex gap-x-12">
 			<div>
 				<Fragment set:html={laptop} />
-				<h3 class="m-0"><a href="https://lenia.netlify.dev/">Demo</a></h3>
+				<h3 class="m-0"><a href="https://lenia.netlify.app/">Demo</a></h3>
 				<span>Built with Svelte</span>
 			</div>
 		</div>
