--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -55,7 +55,7 @@ import laptop from "@/src/icons/laptop.svg?raw"
 	<Card class="center">
 		<h2>Animefaces</h2>
 		<div class="center m-4 rounded-lg bg-white p-4">
-			<Image src="/animefaces.svg" width={512} aspectRatio={1} format="svg" alt="animefaces" />
+			<Image src="/devlog/animefaces.svg" width={512} aspectRatio={1} format="svg" alt="animefaces" />
 			<p class="text-gray-500 p-2">Samples from Stylegan implementation</p>
 		</div>
 		<Divider />
