--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,7 +17,7 @@ import coffee from "@/src/icons/coffee.svg?raw"
 			<HeaderLink href="/devlog/papers">Papers</HeaderLink>
 			<HeaderLink href="/devlog/projects">Projects</HeaderLink>
 			<HeaderLink href="/devlog/rambling">Rambling</HeaderLink>
-			<!-- <HeaderLink href="/devlog/thanks">Thanks</HeaderLink> -->
+			<HeaderLink href="/devlog/cv.pdf">CV</HeaderLink>
 		</div>
 		<div class="flex gap-x-4">
 			<HeaderLink href="https://github.com/RE-N-Y"><Fragment set:html={github} /></HeaderLink>
