graduation overhaul + astro v4 upgrade

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,69 +3,31 @@ import Page from "@/src/layouts/Page.astro"
 ---
 
 <Page>
-	<div class="my-52 text-center">
-		<h1 class="m-2 text-7xl font-bold">Sangwu Lee</h1>
-		<p class="lead">ML researcher, engineeer, programmer, and mathematician.</p>
-	</div>
 
 	<div class="space-y-4">
-		<h2>About me</h2>
+		<h1 class="my-8 text-7xl font-bold">Sangwu Lee</h1>
 		<div>
-			<h3>Overview</h3>
-			<div>
 				<p>
-					I am a Senior student studying computer science and mathematics at University of Rochester. I am currently working as
-					a research assistant for <a href="https://roc-hci.com/">HCI Lab</a> under supervision of <a href="https://hoques.com/"
-						>Professor Ehsan Hoque</a
-					>. I've been an active collaborator of CMU's <a href="http://multicomp.cs.cmu.edu/">Multicomp lab</a> in multimodal learning
-					reserarch.
-				</p>
-			</div>
-		</div>
-		<div>
-			<h3>Researcher</h3>
-			<div>
-				<p>
-					My current research focus is in mulitmodal learning, image / video generation, Web + AI, and building efficient ML
-					systems in general. In conduting ML research, I value iteration speed in testing each idea. Apart from fundemental ML
-					research, I explore use of cutting-edge techniques ( mixed precision, model parallelism, CPU offloading, gradient
-					checkpointing ... ) to accelerate ML reseach. I am also a <a
-						href="https://jax.readthedocs.io/en/latest/notebooks/quickstart.html">JAX</a
-					> enthusiast. In mathematics, I mostly study analysis and differential equations. However, I've been exploring topics in
-					probability theory, mathematical statistics, and most recently, topology.
-				</p>
-			</div>
-		</div>
-		<div>
-			<h3>Engineer</h3>
-			<div>
-				<p>
-					I am also a full-stack web developer! I've been coding web applications since 2015 starting with plain HTML, CSS,
-					Javascript, and a hint of JQuery. Over the years, I've become an avid <a href="https://react.dev/">React</a> user and an
-					<a href="https://svelte.dev/">Svelte</a> enthusiast. However, I've been using <a
-						href="https://github.com/vercel/next.js/">Next.js</a
-					> for more mature projects. For API development, I fully embrace <a href="https://www.docker.com/">Docker</a> and <a
-						href="https://fastapi.tiangolo.com/">FastAPI</a
-					>. I've also made mobile apps using react native / flutter in past years.
-				</p>
-			</div>
-		</div>
-		<div>
-			<h3>Extra</h3>
-			<div>
-				<p>
-					I enjoy reading time to time. Most recently, I've been reading Blind Watchmaker by Richard Dawkins, 재수사 by 장강명,
-					and 夜よ鼠たちのために by 連城三紀彦 (translation by 양윤옥). I've studied multiple langauges in the past. I tried
-					learning Dutch, German, Spanish, and Mandarin in past years. Although, the only language I can speak in confidence
-					(apart from my native tongue) is Japanese. I've lived in Netherlands for 4 years. I can confidently say that Dutch
-					fries are on an another level.
+					Hi, I'm Sangwu. I work on production LLM/RAG systems at <a href="https://quizard.ai/">Quizard</a> @ NYC.
+					While I'm not working, I work on multimodal learning research and train ML models on anime datasets.
+					I believe that ML research "results" and "process" should be transparent and reproducible.
+					I try to use this place to keep track of my own research progress.
 				</p>
 				<p>
-					During my years in Europe. I had a chance to go to Göttingen and visit David Hilbert's grave. I plan to go to
-					Princeton eventually to visit Gödel's grave as well. I was once a cofounder of a startup on Document-AI and got past
-					first few rounds of <a href="https://www.ycombinator.com/">Y-combinator</a>.
+					I grew up in South Korea, Netherlands, and New Mexico. My first programming language was in C, but began seriously coding with JS/TS for fullstack development since 2015.
+					After being inspired by Deepmind's progess in Machine Learning, I began studying ML in 2018 starting with NLP and Recommender systems. 
+					As for my research philosophy, I believe persistence and iteration speed are the key. I try to keep up with latest ML systems and hardware research to improve my training systems.
 				</p>
-			</div>
+				<p>
+					During my undergraduate years, I've worked on various research projects in machine learning / Human computer interaction with a focus on multimodal learning.
+					Together with <a href="https://roc-hci.com/">ROC-HCI Lab</a>, I've worked on developing <a href="https://parktest.net/demo">Health AI systems</a> for diagnosing Parkinson's disease and movement disorders using multimodal data.
+					I've still an active collaborator of CMU's <a href="https://www.lti.cs.cmu.edu/">Language Technologies Institute</a> where I work on multimodal reasoning tasks with vision language models.
+					I mostly <a href="https://scholar.google.com/citations?user=FBJeGpAAAAAJ"> publish in ACL, AAAI, ACII, Nature Digital Medicine, and my favorite ArXiv</a>
+				</p>
+				<p>
+					Apart from ML research, I still consider myself a mathematian at heart. Specifically, my interest is in analysis with a focus on ODE/PDE and probability theory.
+					I'm currently plowing through Axler's Measure theory book and Le Gall's probability book.
+				</p>
 		</div>
 	</div>
 </Page>
