--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -1,6 +1,6 @@
 ---
 import BaseHead from "@/src/components/BaseHead.astro"
-import { SITE_TITLE, SITE_DESCRIPTION } from "@/src/consts"
+import { SITE_TITLE, SITE_DESCRIPTION, PREVIEW_IMAGE } from "@/src/consts"
 import Header from "@/src/components/Header.astro"
 import Footer from "@/src/components/Footer.astro"
 ---
@@ -8,7 +8,7 @@ import Footer from "@/src/components/Footer.astro"
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} image={PREVIEW_IMAGE} />
 	</head>
 	<body>
 		<Header title={SITE_TITLE} />
