--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -44,3 +44,6 @@ const { title, description, image } = Astro.props
 
 <!-- Katex -->
 <link href="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.css" rel="stylesheet">
+
+<!-- Umami Analytics -->
+<script defer src="https://cloud.umami.is/script.js" data-website-id="90cb9e5b-2fbb-4924-8247-e8bbe0e63b80"></script>
