--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@ import github from "@/src/icons/github.svg?raw"
 import coffee from "@/src/icons/coffee.svg?raw"
 ---
 
-<header class="container mx-auto mb-12">
+<header class="container mx-auto mb-12 px-4">
 	<div class="py-4">
 		<h1>{SITE_TITLE}</h1>
 		<h2>{SITE_DESCRIPTION}</h2>
