--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -3,6 +3,9 @@ import BaseHead from "@/src/components/BaseHead.astro"
 import { SITE_TITLE, SITE_DESCRIPTION, PREVIEW_IMAGE } from "@/src/consts"
 import Header from "@/src/components/Header.astro"
 import Footer from "@/src/components/Footer.astro"
+
+import clsx from "clsx"
+const _class = Astro.props.class
 ---
 
 <!DOCTYPE html>
@@ -12,7 +15,7 @@ import Footer from "@/src/components/Footer.astro"
 	</head>
 	<body>
 		<Header title={SITE_TITLE} />
-		<main class="container mx-auto max-w-4xl">
+		<main class={clsx("container mx-auto max-w-5xl px-4", _class)}>
 			<slot />
 		</main>
 		<Footer />
