--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -6,12 +6,12 @@ import { Image } from 'astro:assets';
 import dataset from "@/src/icons/dataset.svg?raw"
 import laptop from "@/src/icons/laptop.svg?raw"
 import arXivImage from "@/src/media/arxiv.png"
-import animefacesImage from "@/src/media/animefaces.svg"
+import animefacesImage from "@/src/media/newfaces.svg"
 ---
 
 <Page>
 	<Card class="center">
-		<h2>Lenia</h2>
+		<h3 class="text-5xl mb-4">Lenia</h3>
 		<div class="center m-4 rounded-lg bg-white p-4">
 			<video class="aspect-square rounded-lg" height={512} width={512} src="/devlog/lenia.webm" autoplay loop></video>
 			<p>Running Neural Celluar Auotmata on the web</p>
@@ -32,7 +32,7 @@ import animefacesImage from "@/src/media/animefaces.svg"
 		</p>
 	</Card>
 	<Card class="center">
-		<h2>ArXiv Vectors</h2>
+		<h3 class="text-5xl mb-4">Arxiv Vectors</h3>
 		<div class="center m-4 rounded-lg bg-white p-4">
 			<Image src={arXivImage} alt="arxiv vectors" />
 			<p>A sane way to search papers on ArXiv</p>
@@ -54,9 +54,9 @@ import animefacesImage from "@/src/media/animefaces.svg"
 		</p>
 	</Card>
 	<Card class="center">
-		<h2>Animefaces</h2>
-		<div class="center m-4 rounded-lg bg-white p-4">
-			<Image src={animefacesImage} height={512} width={512}  alt="animefaces" />
+		<h3 class="text-5xl mb-4">Animefaces</h3>
+		<div class="center m-4 rounded-lg p-4">
+			<Image src={animefacesImage} height={768} width={768}  alt="animefaces" />
 			<p class="text-gray-500 p-2">Samples from Stylegan implementation</p>
 		</div>
 		<Divider />
