--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,7 +20,7 @@
 		@apply mt-4 scroll-m-20 text-xl font-semibold tracking-tight;
 	}
 	a {
-		@apply font-bold text-text transition ease-in-out hover:text-accent;
+		@apply font-bold text-text transition ease-in-out hover:text-accent underline underline-offset-auto decoration-primary;
 	}
 	p {
 		@apply leading-7 text-text [&:not(:first-child)]:mt-3;
@@ -43,7 +43,11 @@
 	}
 
 	img {
-		@apply rounded-md;
+		@apply rounded-sm;
+	}
+
+	pre {
+		@apply my-4 rounded-sm
 	}
 }
 
