done good to publish

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -78,6 +78,7 @@ import Page from "@/src/layouts/Page.astro"
 					<p> - Yes, I've already finished my military service.</p>
 					<p> - I went to a strange school called UWC-USA in Las Vegas, New Mexico.</p>
 					<p> - I'm love <a href="https://github.com/jax-ml/jax">JAX</a>. I've used it train <a href="https://github.com/RE-N-Y/scratchpad">StyleGAN, ViT-VQGAN, EDM, and MaskGiT models on TPUv3 cluster</a></p>
+					<p> - This site is built using <a href="https://astro.build/">Astro</a></p>
 				</div>
 			</div>
 		</div>
